[project]
name = "resume-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "chainlit>=2.6.9",
    "gtts>=2.5.4",
    "openai-agents>=0.2.8",
    "openai-whisper>=20250625",
    "python-dotenv>=1.1.1",
    "reportlab>=4.4.3",
]
